@@ -180,3 +180,33 @@ _wrap_g_themed_icon_get_names(PyGObject *self)
 
     return ret;
 }
+%%
+override g_content_type_guess kwargs
+static PyObject *
+_wrap_g_content_type_guess(PyGObject *self, PyObject *args, PyObject *kwargs)
+{
+    char *kwlist[] = {"filename", "data", "want_uncertain", NULL};
+    char *filename = NULL, *data = NULL, *type;
+    int data_size = 0;
+    gboolean result_uncertain, want_uncertain = FALSE;
+    
+    if (!PyArg_ParseTupleAndKeywords (args, kwargs,
+				      "|zz#i:g_content_type_guess",
+				      kwlist,
+				      &filename, &data, &data_size,
+				      &want_uncertain))
+      return NULL;
+
+    if (!filename && !data) {
+      PyErr_SetString(PyExc_TypeError, "need at least one argument");
+      return NULL;
+    }
+
+    type = g_content_type_guess(filename, (guchar *) data,
+				data_size, &result_uncertain);
+
+    if (want_uncertain)
+	return Py_BuildValue("zN", type,
+			     PyBool_FromLong(result_uncertain));
+    return PyString_FromString(type);
+}
